1999-02-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (init_streamvars): Avoid gcc warning.

1999-02-19  Sam Steingold  <sds@goems.com>

	* defs3.lsp, clos.lsp, init.lsp: do not export `generic-flet',
	`generic-labels'.
	* _impnotes.html is now HTML 3.2 compliant.

1999-02-19  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in: Improve parsing of --hyperspec argument.

1999-02-18  Sam Steingold  <sds@goems.com>

	* affi.txt, ansicl.txt, cltl2.txt, foreign.txt, module.txt,
	vgagraph.txt: removed.

1999-02-17  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in: Improve parsing of --hyperspec argument.

1999-02-17  Sam Steingold  <sds@goems.com>

	* spvw.d: user ascii* instead of asciz* for constant string
	when initializing *features*.
	* _impnotes.txt, impnotes.html: removed.
	* _impnotes.html: new file.
	* makemake.in, ../configure: new option --hyperspec.

1999-02-12  Sam Steingold  <sds@goems.com>

	* socket.d (create_client_socket): port is unsigned int.
	* stream.d: declare `create_client_socket' appropriately.

1999-02-17  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * pseudofun.d: Enclose all XPSEUDOs in #ifdef UNICODE.

1999-02-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Unicode support.
        * makemake.in (--with-unicode): New command line option.
          (XCFLAGS): Conditionally add -DUNICODE.
          (UNICODE_INCLUDES, NLS_INCLUDES): New variables.
          (CFILES): Add them.
          Symlink them.
          (depends): Add $UNICODE_INCLUDES for charstrg. Add $NLS_INCLUDES for
          encoding.
        * lispbibl.d (CHART_STRUCT): Don't define on m68k and arm CPUs.
          (char_int_len): Define as 16 for UNICODE.
          (Encoding) [UNICODE]: Add more fields.
          (encoding_length): Change value.
          (encoding_xlength): New macro.
          (Encoding_mblen, Encoding_mbstowcs, Encoding_wcslen,