@@ -106,8 +106,10 @@ XPSEUDO(uintL, java_wcslen, (object encoding, const chart* src, const chart* src
 XPSEUDO(void, java_wcstombs, (object encoding, const chart* *srcp, const chart* srcend, uintB* *destp, uintB* destend))
 XPSEUDO(uintL, nls_mblen, (object encoding, const uintB* src, const uintB* srcend))
 XPSEUDO(void, nls_mbstowcs, (object encoding, const uintB* *srcp, const uintB* srcend, chart* *destp, chart* destend))
+XPSEUDO(void, nls_asciiext_mbstowcs, (object encoding, const uintB* *srcp, const uintB* srcend, chart* *destp, chart* destend))
 XPSEUDO(uintL, nls_wcslen, (object encoding, const chart* src, const chart* srcend))
 XPSEUDO(void, nls_wcstombs, (object encoding, const chart* *srcp, const chart* srcend, uintB* *destp, uintB* destend))
+XPSEUDO(void, nls_asciiext_wcstombs, (object encoding, const chart* *srcp, const chart* srcend, uintB* *destp, uintB* destend))
 XPSEUDO(struct nls_table, nls_ascii_table,)
 XPSEUDO(struct nls_table, nls_iso8859_1_table,)
 XPSEUDO(struct nls_table, nls_iso8859_2_table,)
